fixed e^-... and scalebox issue

--- a/DSV/a/Makefile
+++ b/DSV/a/Makefile
@@ -13,4 +13,4 @@ $(DOK).pdf:  $(DOK).tex
 	pdflatex $(DOK).tex 
 
 clean:
-	rm -f *.{aux,lof,log,lot,lol,,bcf,toc,bbl,blg,run.xml,out}
+	rm -f *.{pdf,aux,lof,log,lot,lol,,bcf,toc,bbl,blg,run.xml,out}
