Stand in Header eingefügt

--- a/DSV/a/Makefile
+++ b/DSV/a/Makefile
@@ -9,8 +9,8 @@ run: $(DOK).pdf
 
 
 $(DOK).pdf:  $(DOK).tex
-	pdflatex $(DOK).tex -draftmode
-	pdflatex $(DOK).tex 
+	pdflatex -enable-pipes -shell-escape $(DOK).tex -draftmode 
+	pdflatex -enable-pipes -shell-escape $(DOK).tex
 
 clean:
-	rm -f *.{pdf,aux,lof,log,lot,lol,,bcf,toc,bbl,blg,run.xml,out}
+	rm -f *.{aux,lof,log,lot,lol,,bcf,toc,bbl,blg,run.xml,out}
